--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -5,30 +5,19 @@ labels:
 body:
   - type: markdown
     attributes:
-      value: >-
-        Processing feature requests is time consuming so please fill out the
-        following form as completely as possible. **The more complete you are
-        the more likely we can provide a speedier response.**
+      value: |
+        Processing feature requests is time consuming so please fill out the following form as completely as possible. **The more complete you are the more likely we can provide a speedier response.**
 
+        > ⚠️ Requests that are incomplete or missing information will simply be closed.
 
-        > ⚠️ Requests that are incomplete or missing information will simply
-        be closed.
+        Since there are already a lot of open requests, please take a moment to search existing ones to see if your idea has already been proposed. If you find something related, please upvote that request and provide additional details as necessary.
 
-
-        Since there are already a lot of open requests, please take a moment
-        to search existing ones to see if your idea has already been proposed.
-        If you find something related, please upvote that request and provide
-        additional details as necessary.
-
-
-        > 💐 Thanks for helping to make Conda better! We would be unable to do
-        the things we do without our community!
+        > 💐 Thanks for helping to make Conda better! We would be unable to do the things we do without our community!
   - type: checkboxes
     id: checks
     attributes:
       label: Checklist
-      description: >-
-        Please confirm and check all the following options.
+      description: Please confirm and check all the following options.
       options:
         - label: I added a descriptive title
           required: true
@@ -38,28 +27,21 @@ body:
     id: idea
     attributes:
       label: What is the idea?
-      description: >-
-        Describe what the feature is and the desired state.
+      description: Describe what the feature is and the desired state.
     validations:
       required: true
   - type: textarea
     id: why
     attributes:
       label: Why is this needed?
-      description: >-
-        Who would benefit from this feature?
-        Why would this add value to them?
-        What problem does this solve?
+      description: Who would benefit from this feature? Why would this add value to them? What problem does this solve?
   - type: textarea
     id: what
     attributes:
       label: What should happen?
-      description: >-
-         What should be the user experience with the feature?
-         Describe from a user perpective what they would do and see.
+      description: What should be the user experience with the feature? Describe from a user perpective what they would do and see.
   - type: textarea
     id: context
     attributes:
       label: Additional Context
-      description: >-
-        Include any additional information that you think would be valuable.
+      description: Include any additional information that you think would be valuable.
